--- a/pages/UI/sliders.html
+++ b/pages/UI/sliders.html
@@ -560,6 +560,9 @@
             <div class="box-header">
               <h3 class="box-title">Bootstrap Slider</h3>
             </div>
+
+            <div class="slider slider-horizontal" id="red"><div class="slider-track"><div class="slider-track-low" style="left: 0px; width: 47.5%;"></div><div class="slider-selection" style="left: 47.5%; width: 33.75%;"></div><div class="slider-track-high" style="right: 0px; width: 18.75%;"></div><div class="slider-handle min-slider-handle round" role="slider" aria-valuemin="-200" aria-valuemax="200" aria-valuenow="-10" tabindex="0" style="left: 47.5%;"></div><div class="slider-handle max-slider-handle round" role="slider" aria-valuemin="-200" aria-valuemax="200" aria-valuenow="125" tabindex="0" style="left: 81.25%;"></div></div><div class="tooltip tooltip-main top" role="presentation" style="left: 64.375%; margin-left: -32px;"><div class="tooltip-arrow"></div><div class="tooltip-inner">-10 : 125</div></div><div class="tooltip tooltip-min top" role="presentation" style="left: 47.5%; margin-left: 0px; display: none;"><div class="tooltip-arrow"></div><div class="tooltip-inner">-10</div></div><div class="tooltip tooltip-max top" role="presentation" style="left: 81.25%; margin-left: 0px; display: none;"><div class="tooltip-arrow"></div><div class="tooltip-inner">125</div></div></div>
+            <input type="text" value="-10,125" class="slider form-control" data-slider-min="-200" data-slider-max="200" data-slider-step="5" data-slider-value="[-100,100]" data-slider-orientation="horizontal" data-slider-selection="before" data-slider-tooltip="show" data-slider-id="red" data-value="-10,125" style="display: none;">
             <!-- /.box-header -->
             <div class="box-body">
               <div class="row margin">
